# etib-game-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  imgui.ini
.github/workflows/: build.yml
assets/shader/: player.frag  player.vert
docs/html/: Color_8hpp.html  Color_8hpp__dep__incl.dot  Color_8hpp_source.html  Error_8hpp.html  Error_8hpp__dep__incl.dot  Error_8hpp__incl.dot  Error_8hpp_source.html  Event_8hpp.html  Event_8hpp__dep__incl.dot  Event_8hpp__incl.dot  Event_8hpp_source.html  GlfwCallback_8hpp.html  GlfwCallback_8hpp__dep__incl.dot  GlfwCallback_8hpp__incl.dot  GlfwCallback_8hpp_source.html  Matrix_8hpp.html  Matrix_8hpp__incl.dot  Matrix_8hpp_source.html  OpenGL_8hpp.html  OpenGL_8hpp__dep__incl.dot  OpenGL_8hpp__incl.dot  OpenGL_8hpp_source.html  Vector2_8hpp.html  Vector2_8hpp__dep__incl.dot  Vector2_8hpp_source.html  Vector3_8hpp.html  Vector3_8hpp_source.html  Vector4_8hpp.html  Vector4_8hpp_source.html  Window_8hpp.html  Window_8hpp__incl.dot  Window_8hpp_source.html  annotated.html  classEGE_1_1Color-members.html  classEGE_1_1Color.html  classEGE_1_1Color__coll__graph.dot  classEGE_1_1Error-members.html  classEGE_1_1Error.html  classEGE_1_1Error__coll__graph.dot  classEGE_1_1Error__inherit__graph.dot  (+136 more)
docs/html/search/: all_1.js  (+62 more)
docs/latex/: Color_8hpp.tex  Color_8hpp.tex.tmp  Color_8hpp__dep__incl.dot  Color_8hpp_source.tex  Error_8hpp.tex  Error_8hpp__dep__incl.dot  Error_8hpp__incl.dot  Error_8hpp_source.tex  Event_8hpp.tex  Event_8hpp__dep__incl.dot  Event_8hpp__incl.dot  Event_8hpp_source.tex  GlfwCallback_8hpp.tex  GlfwCallback_8hpp__dep__incl.dot  GlfwCallback_8hpp__incl.dot  GlfwCallback_8hpp_source.tex  Matrix_8hpp.tex  Matrix_8hpp__incl.dot  Matrix_8hpp_source.tex  OpenGL_8hpp.tex  OpenGL_8hpp__dep__incl.dot  OpenGL_8hpp__incl.dot  OpenGL_8hpp_source.tex  Vector2_8hpp.tex  Vector2_8hpp__dep__incl.dot  Vector2_8hpp_source.tex  Vector3_8hpp.tex  Vector3_8hpp_source.tex  Vector4_8hpp.tex  Vector4_8hpp_source.tex  Window_8hpp.tex  Window_8hpp__incl.dot  Window_8hpp_source.tex  annotated.tex  classEGE_1_1Color.tex  classEGE_1_1Color__coll__graph.dot  classEGE_1_1Error.tex  classEGE_1_1Error__coll__graph.dot  classEGE_1_1Error__inherit__graph.dot  classEGE_1_1Event.tex  (+53 more)
include/: Animation.hpp  Animator.hpp  Bone.hpp  Camera.hpp  Color.hpp  Error.hpp  Event.hpp  GlfwCallback.hpp  MemoryIOStream.hpp  MemoryIOSystem.hpp  Mesh.hpp  Model.hpp  ModelVR.hpp  Movement.hpp  OpenGL.hpp  Shader.hpp  Texture.hpp  Utils.hpp  UtilsVR.hpp  Vertex.hpp  Window.hpp  WindowVR.hpp  glm.hpp
include/GUI/: Container.hpp  GUI.hpp  GUIManager.hpp  Image.hpp  Interactable.hpp  ListBox.hpp  Panel.hpp  RadioButtonList.hpp  Text.hpp
include/Maths/: Matrix.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Sound/: Device.hpp  Playlist.hpp  Sound.hpp
src/: Animation.cpp  Animator.cpp  Bone.cpp  Camera.cpp  Color.cpp  Event.cpp  MemoryIOStream.cpp  MemoryIOSystem.cpp  Mesh.cpp  Model.cpp  ModelVR.cpp  Movement.cpp  Shader.cpp  Texture.cpp  Utils.cpp  UtilsVR.cpp  Vertex.cpp  Window.cpp  WindowVR.cpp
src/GUI/: GUI.cpp  GUIManager.cpp  ListBox.cpp  Panel.cpp  RadioButtonList.cpp  Text.cpp
src/Sound/: Device.cpp  Playlist.cpp  Sound.cpp
tests/vr/: Makefile  debug.keystore
(+42 files in other folders)
